02. kubernetes/013.02.mynapp-ing-multi-paths.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mynapp-ing-mpath
spec:
  rules:
    - host: mynapp.example.com
      http:
        paths:
          - path: /web1 # http://mynapp.example.com/web1
            backend:
              serviceName: mynapp-svc-ext-np1
              servicePort: 80
          - path: /web2 # http://mynapp.example.com/web2
            backend:
              serviceName: mynapp-svc-ext-np2
              servicePort: 80
